fix: resolve skill name alignment in mobile

--- a/src/App.css
+++ b/src/App.css
@@ -128,13 +128,11 @@ button {
   max-height: 128px;
 }
 
-@media screen and (max-width: 700px) {
-  .legendary-shard {
-    min-width: 56px;
-    max-width: 56px;
-    min-height: 56px;
-    max-height: 56px;
-  }
+.legendary-shard-mobile {
+  min-width: 56px;
+  max-width: 56px;
+  min-height: 56px;
+  max-height: 56px;
 }
 
 .shard-hero-avatar {
